--- a/resources/techcomm-map-styles.css
+++ b/resources/techcomm-map-styles.css
@@ -30,7 +30,7 @@ html, body, #map-canvas {
   border-radius: 2px 0 0 2px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
-  height: 118px;
+  height: 130px;
   width: 230px;
   outline: none;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
@@ -45,7 +45,11 @@ html, body, #map-canvas {
   font-weight: 300;
 }
 
-#selecttype-conference {
+#selecttype-conference14 {
+  outline: 2px solid #404040
+}
+
+#selecttype-conference15 {
   outline: 2px solid #c077f1
 }
 
