--- a/resources/techcomm-map-styles.css
+++ b/resources/techcomm-map-styles.css
@@ -30,7 +30,7 @@ html, body, #map-canvas {
   border-radius: 2px 0 0 2px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
-  height: 130px;
+  height: 155px;
   width: 230px;
   outline: none;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
@@ -65,8 +65,12 @@ html, body, #map-canvas {
   outline: 2px solid #1ab61a
 }
 
-#selecttype-other {
+#selecttype-course {
   outline: 2px solid #017cff
+}
+
+#selecttype-other {
+  outline: 2px solid #01e2ff
 }
 
 #place-search {
